# sqlite-mcp

./: .gitignore  .gitmodules  API.md  Cargo.toml  LICENSE  Makefile  Package.swift  README.md  USAGE.md
.github/workflows/: main.yml
src/: lib.rs  mcp_ffi.h  sqlite-mcp.c  sqlite-mcp.h
test/: main.c
