[package]
name = "mcp-ffi"
version = "0.1.0"
edition = "2021"

[dependencies]
rmcp = { path = "modules/mcp/crates/rmcp", features = ["server", "client", "transport-sse-client-reqwest", "transport-streamable-http-client-reqwest", "reqwest"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json"] }
lazy_static = "1.4"

[lib]
name = "mcp_ffi"
crate-type = ["staticlib"]

[profile.release]
opt-level = 3
lto = true
