[package]
name = "mcp-ffi"
version = "0.1.0"
edition = "2021"

[dependencies]
rmcp = { path = "modules/mcp/crates/rmcp", features = ["client", "transport-sse-client-reqwest", "transport-streamable-http-client-reqwest"] }
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time", "macros"], default-features = false }
serde_json = { version = "1.0", default-features = false, features = ["std"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
lazy_static = "1.5"

[lib]
name = "mcp_ffi"
crate-type = ["staticlib"]

[profile.release]
opt-level = "z"
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
debug = false
